--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.4.12</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example.demo</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>university-hub</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>university-hub</name>
