--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 							<configOptions>
 								<interfaceOnly>true</interfaceOnly>
 								<useSpringBoot3>true</useSpringBoot3>
+								<useTags>true</useTags>
 							</configOptions>
 						</configuration>
 					</execution>
