--- a/src/main/resources/university-hub-api.yaml
+++ b/src/main/resources/university-hub-api.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: University Hub API
-  description: An API to manage entire university hierarchies in a single request.
+  description: An API to manage entire university hierarchies.
   version: 1.0.0
 servers:
   - url: http://localhost:8083
